--- a/README.rdoc
+++ b/README.rdoc
@@ -70,7 +70,7 @@ Here's how to start mongo and run the "simple.rb" example:
   $ cd path/to/mongo-ruby-driver
   $ ruby examples/simple.rb
 
-See also the test code, especially tests/test_db_api.rb.
+See also the test code, especially test/test_db_api.rb.
 
 = The Driver
 
