--- a/README.rdoc
+++ b/README.rdoc
@@ -7,9 +7,9 @@ many more.
 
   require 'mongo'
 
-  include XGen::Mongo::Driver
+  include Mongo
 
-  db = Mongo.new('localhost').db('sample-db')
+  db = Mongo::Mongo.new('localhost').db('sample-db')
   coll = db.collection('test')
 
   coll.clear
@@ -79,8 +79,8 @@ Here is some simple example code:
   require 'rubygems'        # not required for Ruby 1.9
   require 'mongo'
 
-  include XGen::Mongo::Driver
-  db = Mongo.new.db('my-db-name')
+  include Mongo
+  db = Mongo::Mongo.new.db('my-db-name')
   things = db.collection('things')
 
   things.clear
@@ -149,8 +149,8 @@ using a PK factory lets you do so.
 You can tell the Ruby Mongo driver how to create primary keys by passing in
 the :pk option to the Mongo#db method.
 
-  include XGen::Mongo::Driver
-  db = Mongo.new.db('dbname', :pk => MyPKFactory.new)
+  include Mongo
+  db = Mongo::Mongo.new.db('dbname', :pk => MyPKFactory.new)
 
 A primary key factory object must respond to :create_pk, which should take a
 hash and return a hash which merges the original hash with any primary key
@@ -164,7 +164,7 @@ Here is a sample primary key factory, taken from the tests:
 
   class TestPKFactory
     def create_pk(row)
-      row['_id'] ||= XGen::Mongo::Driver::ObjectID.new
+      row['_id'] ||= Mongo::ObjectID.new
       row
     end
   end
@@ -178,7 +178,7 @@ ActiveRecord-like framework for non-Rails apps) and the AR Mongo adapter code
     def create_pk(row)
       return row if row[:_id]
       row.delete(:_id)      # in case it exists but the value is nil
-      row['_id'] ||= XGen::Mongo::Driver::ObjectID.new
+      row['_id'] ||= Mongo::ObjectID.new
       row
     end
   end
@@ -205,7 +205,7 @@ completely harmless; strict mode is a programmer convenience only.
 To turn on strict mode, either pass in :strict => true when obtaining a DB
 object or call the :strict= method:
 
-  db = XGen::Mongo::Driver::Mongo.new.db('dbname', :strict => true)
+  db = Mongo::Mongo.new.db('dbname', :strict => true)
   # I'm feeling lax
   db.strict = false
   # No, I'm not!
