--- a/README.rdoc
+++ b/README.rdoc
@@ -297,6 +297,9 @@ Paul Dlug, paul.dlug@gmail.com
 * Generate _id on the client side if not provided
 * Collection#insert and Collection#save return _id
 
+Durran Jordan and Les Hill, durran@gmail.com
+* DB#collections
+
 = License
 
  Copyright 2008-2009 10gen Inc.
