--- a/README.rdoc
+++ b/README.rdoc
@@ -329,6 +329,9 @@ Cyril Mougel, cyril.mougel@gmail.com
 Jack Chen, chendo on github
 * Test case + fix for deserializing pre-epoch Time instances
 
+Kyle Banker, banker on github
+* #limit and #skip methods for Cursor instances
+
 = License
 
  Copyright 2008-2009 10gen Inc.
