--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,15 @@
+0.18.2 2009-12-21
+* Enabled support for keyf on group
+* Signification GridStore performance improvement (thx., Sunny Hirai)
+* Support :query option for Collection#distinct
+* Support :finalize option for Collection#group
+* (0.18.1) ObjectID#generation_time returns a created_at timestamp.
+* Deprecated Command#group running as a JS eval; should now be run as a command.
+* Deprecated Cursor#next_object for Cursor#next_document
+* Character encoding fixes for C extension
+* Enforce 4MB limit on document creation
+* Simplified connection pooling code
+
 0.18.1 2009-12-05
 * Fixed issue with negative dates in Ruby 1.9
 * Minor refactorings for C extension and BSON classes
