--- a/README.rdoc
+++ b/README.rdoc
@@ -25,7 +25,6 @@ The driver's gems are hosted on Gemcutter[http://gemcutter.org]. If you haven't
 installed a gem from Gemcutter before, you'll need to set up Gemcutter first:
 
   $ gem install gemcutter
-  $ gem tumble
 
 Once you've installed Gemcutter, install the mongo gem as follows:
 
@@ -104,7 +103,7 @@ Examples:
 
   # Write a file on disk to the Grid
   file = File.open('image.jpg')
-  grid = GridFileSystem.new(db)
+  grid = Grid.new(db)
   id   = grid.put(file)
 
   # Retrieve the file
